--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "puppeteer": "^22.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
