Package Changes, Remove tailwindcss postcss autoprefixer, Install react-bootstrap bootstrap, Upadate components to use react-bootstrap, Add images -> assets/images Remove tailwind.config.js postcss.config.js

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
             "components/*": ["./src/components/*"],
             "redux/*": ["./src/redux/*"],
             "config/*": ["./src/config/*"],
+            "assets/*": ["./src/assets/*"],
             "pages/*": ["./src/pages/*"],
         }
     }
